<resources>
    <string name="app_name">Einz</string>
    <string name="btn_s_start_game_initialization_text">start game</string>
    <string name="btn_s_listen_for_clients_text">Listen for clients</string>

    <string name="title_activity_client_test">ClientActivity_test</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="title_activity_server_setup">ServerSetupActivity</string>
    <string name="btn_s_host_game">Host Game</string>
    <string name="et_s_username">username</string>
    <string name="observer">Observer</string>
    <string name="host_game_title">E1NZ</string>
    <string name="start_server">START SERVER</string>
    <string name="IME_start_server">Start Server</string>
    <string name="et_c_username">username</string>
    <string name="tv_c_setup_port">port</string>
    <string name="tv_c_username">username</string>
    <string name="tv_c_setup_ip">server IP</string>
    <string name="btn_c_setup">connect</string>
    <string name="btn_c_join_game">join game</string>
    <string name="kick">kick</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
