<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_default"
    tools:context="ch.ethz.inf.vs.a4.minker.einz.UI.ServerSetupActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/orange_default"
        android:keepScreenOn="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/et_s_username"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight=".5"
                android:backgroundTint="@color/orange_brown"
                android:hint="@string/et_s_username"
                android:imeActionLabel="@string/IME_start_server"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/orange_brown" />

            <CheckBox
                android:id="@+id/cb_s_observer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTint="@color/orange_brown"
                android:text="@string/observer"
                android:textColor="@color/orange_brown"
                android:buttonTint="@color/orange_brown"
                 />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_s_setupactivity_start_server"
            style="?metaButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_red"
            android:text="@string/start_server"
            android:textAllCaps="false"
            android:textColor="@color/red_darker"></Button>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</LinearLayout>
