<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ch.ethz.inf.vs.a4.minker.einz.UI.ClientSetupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange_default"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/et_c_setup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_brown"
                android:hint="@string/tv_c_username"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/orange_brown" />

            <EditText
                android:id="@+id/et_c_setup_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_brown"
                android:hint="@string/tv_c_setup_ip"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/orange_brown" />

            <EditText
                android:id="@+id/et_c_setup_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_brown"
                android:hint="@string/tv_c_setup_port"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/orange_brown" />

            <CheckBox
                android:id="@+id/cb_c_spectator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:buttonTint="@color/orange_brown"
                android:drawableTint="@color/orange_brown"
                android:text="@string/observer"
                android:textColor="@color/orange_brown"

                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6" />
            ]
            <Button
                android:id="@+id/btn_c_setup"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_red"
                android:textColor="@color/red_darker" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
